fixed that button is too big in mobile phone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,7 +193,7 @@ hr {
 .pagination-button {
   color: #999;
   border: 1px solid #e0e0e0;
-  padding: 14px 42px;
+  padding: 0.7rem 2.1rem;
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
